# apps/api/src/app.module.ts
@@ -3,6 +3,7 @@ import { ConfigModule } from '@nestjs/config';
 import { AuthModule } from './auth/auth.module';
 import { PrismaModule } from './prisma/prisma.module';
 import { ApiKeysModule } from './api-keys/api-keys.module';
+import { WaitlistModule } from './waitlist/waitlist.module';
 
 @Module({
   imports: [
@@ -13,6 +14,7 @@ import { ApiKeysModule } from './api-keys/api-keys.module';
     PrismaModule,
     AuthModule,
     ApiKeysModule,
+    WaitlistModule,
   ],
 })
 export class AppModule {}
