# apps/api/src/waitlist/waitlist.module.ts
@@ -1,0 +1,12 @@
+import { Module } from '@nestjs/common';
+import { WaitlistController } from './waitlist.controller';
+import { WaitlistService } from './waitlist.service';
+import { ResendService } from './resend.service';
+import { PrismaModule } from '../prisma/prisma.module';
+
+@Module({
+  imports: [PrismaModule],
+  controllers: [WaitlistController],
+  providers: [WaitlistService, ResendService],
+})
+export class WaitlistModule {}
